# Sentinel

./: .gitignore  CMakeLists.txt  build.sh  readme.md
.cache/clangd/index/: filemanager.cpp.0DF9871320792AC0.idx  sentinel.cpp.563E600B41976F8F.idx  sha256.cpp.9E1F456C14965CF8.idx  sha256.h.40A6E5E0C821F746.idx  test.cpp.A88EBEF3E638E167.idx
inc/: command.h  filemanager.h  jsonreader.h  sha256.h
res/: commands.json
src/: sentinel.cpp
src/algorithms/: sha256.cpp
src/filemanager/: command.cpp  filemanager.cpp  jsonreader.cpp
